# spark-plan-doctor-py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  rule_request.md
.github/workflows/: ci.yml
docs/: ai-ready-delta.md  design.md  pypi-release.md  rules.md
examples/: databricks_plan_scan.py  genie_ready_views.py  saved_plan_ci.py
src/spark_plan_doctor/: __init__.py  __main__.py  ai_assets.py  cli.py  config.py  demo.py  doctor.py  models.py  parser.py  plan.py  redact.py  rules.py  writers.py
tests/: fakes.py  sample_plans.py  test_cli.py  test_doctor.py  test_models.py  test_parser.py  test_rules.py  test_writers.py
